@@ -1,0 +1,24 @@
+<h1>NewJeans內部爭議升級！阿多爾拒絕恢復閔熙珍CEO職位，樂隊面臨艱難抉擇：留下、解約或付出巨額罰款</h1>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sJyIOYw3FMI" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<p>阿多爾（Ador），HYBE旗下的K-pop經紀公司，最近確認不會接受NewJeans的要求，恢復閔熙珍（Min Hee-jin）為CEO。該公司以遵守HYBE的管理和製作分離原則為由，拒絕了NewJeans的要求。</p>
+<p>阿多爾表示，閔熙珍可以繼續擔任內部董事和NewJeans的製作人。董事會已經決定召開臨時股東大會，重新任命閔熙珍為內部董事。然而，董事會目前無法接受恢復她為CEO的要求。</p>
+<p>閔熙珍隨即發表了一份新聞稿，再次要求恢復她為CEO，以確保NewJeans的持續成功和表現。阿多爾的決定使NewJeans的選擇有限。該組合必須選擇留在HYBE旗下，由新任CEO金柱英（Kim Ju-young）領導，尋找法律依據以終止合同，或者支付巨額罰款以終止合同並與閔熙珍合作。</p>
+<p>NewJeans打破沉默，對閔熙珍和HYBE之間的爭議發表了聲明：「我們想要阿多爾恢復到原來的狀態，由（前）CEO閔熙珍負責管理和製作。我們相信這是與HYBE和平共處的方式。」</p>
+<p>這份聲明被視為戰略性舉動，可能是在為潛在的法律行動做準備。在申請暫停合同之前，NewJeans似乎給予HYBE一個糾正任何違約的機會。</p>
+<p>根據公平交易委員會提出的《藝人經紀合約標準合同》第15條，如果「經紀公司」或「藝人」違反合同，另一方可以要求在14天內糾正違約。如果違約未在此期間糾正，合同可以終止，並可以索取損害賠償。這就是NewJeans在9月11日直播後兩週內設定的9月25日截止日期，要求HYBE做出回應。</p>
+<p>然而，即使NewJeans在14天後追究合同終止訴訟，以閔熙珍的解雇為由可能不足以支持其訴訟。根據您的要求，我們刪除了宣傳部分、格式的段落、圖片來源、記者報道等無關文章主旨的句子，並改寫了內容以符合您的身份設定。以下是處理好的中文HTML結構：</p>
+<p>韓國娛樂法學會會長、教授李在京表示，NewJeans可能會以阿多爾未能履行合同義務或信任關係破裂為由，爭取合同有效性暫停。然而，很難聲稱阿多爾違反了關鍵合同義務，例如付款結算。NewJeans要求恢復閔熙珍為CEO的要求可能不是一個在法庭上令人信服的論點。</p>
+<p>NewJeans的另一選擇是支付罰款終止合同，據報導估計罰款金額在300億至500億韓元之間。</p>
+<p>由於NewJeans的合同詳情尚未公開，確切的罰款金額尚不清楚。然而，根據文化體育觀光部的標準專屬合同，罰款是根據藝人過去兩年的平均月銷售額乘以合同剩餘月份計算的。</p>
+<p>以下是NewJeans合同終止的罰款金額估計：</p>
+<ul>
+<li>合同剩餘月份：約5年</li>
+<li>阿多爾過去兩年的收入估計：約190億韓元</li>
+<li>罰款金額估計：450億至500億韓元</li>
+<p></ul></p>
+<p>音樂評論家林熙允認為，如果樂隊堅持其原始要求，支付罰款可能是最簡單的解決方案。</p>
+<p>林熙允表示：「就像G-Dragon加入Galaxy Corporation一樣，一家富有的公司可能會介入並接管NewJeans。」</p>
+
+<p>資料來源： Korea Herald</p>
